--- a/_instruments/pragma/g6-002.md
+++ b/_instruments/pragma/g6-002.md
@@ -12,32 +12,32 @@ taxonomy:
     variant:            ""
 construction:
     date:
-        start:          "2020-10-01"
-        end:            "2021-04-30"
+        start:          "2020-03-01"
+        end:            "2021-09-30"
     neck:
-        material:       "7 pieces Sapele, Hard Maple, Birch"
+        material:       "5 pieces Sapele, Laburnum, Hard Maple"
         nutWidth:       "43mm"
         thickness:      "20mm at 1st, 22mm at 12th"
     fretboard:
-        material:       "Beli"
+        material:       "Hard maple"
         thickness:      "5mm"  
-        radius:         "300mm"
-        frets:          "Dunlop 6105"
+        radius:         "300mm (12'')"
+        frets:          "Jescar Medium"
     body:
-        material:       "3 pieces Alder, Mahogany"
+        material:       "2 pieces toulipier"
         thickness:      "30mm"
     top:
-        material:       "2 pieces bookmatched Black Walnut"
+        material:       "2 pieces bookmatched Chestnut"
         thickness:      "8mm"
     electronics:
-        wiring:         "3 positions, 1 tone, 1 volume, Kill switch"
+        wiring:         "3 positions, 1 tone, 1 volume"
         pickups:        "2 HB Wilkinson"
-        shielding:      "Copper tape"
-    locks:              "Schaller-style"
+        shielding:      ""
+    locks:              "Default"
     bridge:             "Headless fixed zinc alloy"
     finish:             "Wax and linen oil"
 
         
 ---
 
-prova
+g6-002
