--- a/_instruments/pragma/b4f-001.md
+++ b/_instruments/pragma/b4f-001.md
@@ -2,8 +2,8 @@
 name:                  "B4f-001"
 category:              "Pragma"
 images:
-    thumbnail:          ""
-    header:             ""
+    thumbnail:          "b4f-001/header.jpg"
+    header:             "b4f-001/header.jpg"
 taxonomy:
     type:               "Serie"
     serie:              "Pragma"
