--- a/_instruments/pragma/b4f-001.md
+++ b/_instruments/pragma/b4f-001.md
@@ -36,6 +36,8 @@ construction:
     bridge:             "Headless fixed zinc alloy"
     finish:             "Epoxy resin"
 
+layout: instrument
+
         
 ---
 
