--- a/_instruments/pragma/g6-001.md
+++ b/_instruments/pragma/g6-001.md
@@ -1,6 +1,6 @@
 ---
-name:                  "RIMA"
-category:              "Pragma"
+name:                  "g6-001"
+category:              "P"
 status:                "finished"
 images:
     thumbnail:          ""
