--- a/_instruments/pragma/g6-002.md
+++ b/_instruments/pragma/g6-002.md
@@ -1,6 +1,6 @@
 ---
-name:                  "RIMA"
-category:              "Pragma"
+name:                  "g6-002"
+category:              "Pr"
 status:                "finished"
 images:
     thumbnail:          ""
