--- a/_instruments/pragma/b4f-001.md
+++ b/_instruments/pragma/b4f-001.md
@@ -1,5 +1,5 @@
 ---
-name:                  "B4f-001"
+name:                  "b4f-001"
 category:              "Pragma"
 images:
     thumbnail:          "b4f-001/header.jpg"
