--- a/_instruments/other/001.md
+++ b/_instruments/other/001.md
@@ -1,6 +1,6 @@
 ---
 name:                  "001"
-category:              "other"
+category:              "Other"
 status:                 "Finished"
 images:
     thumbnail:          ""
